package baseline;

/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Diego Figueroa
 */

public class Product{
    public String name;
    public double price;
    public long quantity;
}
