package baseline;

/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Diego Figueroa
 */

public class Solution44 {

    //main
    public static void main(String[] args) {
        ProductSearch x = new ProductSearch();
        x.getProduct();
    }

}
